--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="section-container">
             <div class="section__pic-container">
                 <img 
-                src="./assets/profile-pic1.jpg" 
+                src="./assets/about-pic.png" 
                 alt="profile picture"
                 class="about-pic"
                 >
